--- a/src/birthday.html
+++ b/src/birthday.html
@@ -1,31 +1,32 @@
 <!doctype HTML>
 <html>
 <head>
-	<title>Happy Birthday</title>
-	<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-	<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
+    <title>Happy Birthday</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin: 0px; overflow: hidden;">
-	
-	<a-scene embedded arjs="debugUIEnabled:false; sourceType: webcam;" vr-mode-ui="enabled: false">
-      	
-		<!-- define your gltf asset -->
-		<a-assets>
-			<a-asset-item id="cake" src="../assets/Cake.glb"></a-asset-item>
-		</a-assets>
 
-		<a-marker preset="custom" type="pattern" url="../assets/pattern-marker.patt">
-			<a-text font="kelsonsans" value="Happy Birthday" width="3" position="-1 2 -1.5" rotation="0 0 0" color="#f442eb"></a-text>
-			<!-- use your gltf model -->
-			<a-entity gltf-model="#cake" play-all-model-animations="" position="0 1 -2.5" rotation="0 0 0" scale="0.1 0.1 0.1" visible="true">
-				<a-animation attribute="rotation" repeat="indefinite" fill="forwards" easing="linear" dur="10000" from="0 0 0" to="0 360 0"></a-animation>
-			</a-entity>
-		</a-marker>
+    <a-scene embedded arjs="debugUIEnabled:false; sourceType: webcam;" vr-mode-ui="enabled: false">
+    <!-- define your gltf asset -->
+    <a-assets>
+        <a-asset-item id="cake" src="../assets/Cake.glb"></a-asset-item>
+    </a-assets>
 
-		<!-- define a camera which will move according to the marker position -->
-		<a-entity camera></a-entity>
-		
-	</a-scene>
+    <a-marker preset="custom" type="pattern" url="../assets/pattern-marker.patt">
+        <a-text font="kelsonsans" value="Happy Birthday" align="center" position="0 0 -0.1" rotation="-90 0 0" color="#f442eb">
+            <a-animation attribute="rotation" repeat="indefinite" direction="alternate" easing="linear" dur="500" from="0 0 -10" to="0 0 10"></a-animation>
+        </a-text>
+        <!-- use your gltf model -->
+        <a-entity gltf-model="#cake" play-all-model-animations="" position="0 0 1" rotation="0 0 0" scale="0.1 0.1 0.1" visible="true">
+            <a-animation attribute="rotation" repeat="indefinite" fill="forwards" easing="linear" dur="10000" from="0 0 0" to="0 360 0"></a-animation>
+        </a-entity>
+    </a-marker>
+
+    <!-- define a camera which will move according to the marker position -->
+    <a-entity camera></a-entity>
+    </a-scene>
 
 </body>
 </html>
